--- a/init.d/shannon-server.sh.example
+++ b/init.d/shannon-server.sh.example
@@ -13,6 +13,7 @@ SHANNON_ROOT='/usr/local/cooperhewitt/shannon-server/'
 
 GUNICORN=`which gunicorn`
 GUNICORN_OPTS='-u www-data -b 127.0.0.1:6521'
+# GUNICORN_OPTS='-u www-data -b 127.0.0.1:6521 -w 4 -k egg:gunicorn#gevent'
 
 PIDFILE=/var/run/shannon-server.pid
 
